--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programa</title>
     <link rel="stylesheet" href="./bootstrap.css">
-    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <div class="container">
@@ -16,7 +15,7 @@
                 <h1>Calculadora de vectores</h1>
                 <div class="form-group">
                     <label class="col-form-label mt-4" for="inputDefault">Masa del cuerpo(Kilogramos)</label>
-                    <input type="text" class="form-control"  id="inputDefault">
+                    <input type="text" class="form-control"  id="">
                 </div>
                 <div class="form-group">
                     <label class="col-form-label mt-4" for="inputDefault">Ingrese la fuerza aplicada al cuerpo (Newton)(Ingresar valor negativo (-) para mover el objeto en la direccion opuesta)</label>
@@ -24,10 +23,10 @@
                 </div>
                 <div class="form-group">
                     <label for="exampleSelect1" class="form-label mt-4">¿El plano está inclinado?</label>
-                    <select class="form-select" id="exampleSelect1">
-                      <option>Si</option>
-                      <option>No</option>
-                    </select>
+                    <div class="form-group">
+                      <button type="button" class="btn btn-primary">Si</button>
+                      <button type="button" class="btn btn-primary">No</button>
+                    </div>
                   </div>
                   <div class="form-group">
                     <label for="exampleSelect1" class="form-label mt-4">¿Hay fricción?</label>
