--- a/index.html
+++ b/index.html
@@ -30,10 +30,16 @@
               </div>
               <div class="form-group">
                 <label for="exampleSelect1" class="form-label mt-4">¿Hay fricción?</label>
-                <div class="form-group">
+                <!-- <div class="form-group">
                   <button type="button" class="btn btn-primary" onclick="friccionq()">Si</button>
                   <button type="button" class="btn btn-primary" onclick="">No</button>
+                </div> -->
+                <div class="form-check form-switch">
+                  <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
                 </div>
+              </div>
+              <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="friccionq()">CALCULAR</button>
               </div>
           </div>
           <div class="col-lg-4">
