--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programa</title>
     <link rel="stylesheet" href="./bootstrap.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="container">
@@ -14,19 +15,22 @@
           <div class="col-lg-4">
             <h1>Calculadora de vectores</h1>
               <div class="form-group">
-                <label class="col-form-label mt-4" for="inputDefault">Masa del cuerpo(Kilogramos)</label>
-                <input type="text" class="form-control"  id="">
+                <label class="col-form-label mt-4" for="inputDefault">Masa del cuerpo</label>
+                <input type="text" class="form-control"  id="inputDefault" placeholder="(Kilogramos)">
               </div>
               <div class="form-group">
-                <label class="col-form-label mt-4" for="inputDefault">Ingrese la fuerza aplicada al cuerpo (Newton)(Ingresar valor negativo (-) para mover el objeto en la direccion opuesta)</label>
-                <input type="text" class="form-control"  id="inputDefault">
+                <label class="col-form-label mt-4" for="inputDefault">Fuerza aplicada al cuerpo (Ingresar valor negativo (-) para mover el objeto en la direccion opuesta)</label>
+                <input type="text" class="form-control"  id="inputDefault" placeholder="(Newton)">
               </div>
               <div class="form-group">
                 <label for="exampleSelect1" class="form-label mt-4">¿El plano está inclinado?</label>
-                <div class="form-group">
+                <div class="form-check form-switch">
+                  <input class="form-check-input" type="checkbox" id="planoS" onclick="planoq()">
+                </div>
+                <!-- <div class="form-group">
                   <button type="button" class="btn btn-primary" onclick="planoq()">Si</button>
                   <button type="button" class="btn btn-primary" onclick="">No</button>
-                </div>
+                </div> -->
               </div>
               <div class="form-group">
                 <label for="exampleSelect1" class="form-label mt-4">¿Hay fricción?</label>
@@ -35,7 +39,7 @@
                   <button type="button" class="btn btn-primary" onclick="">No</button>
                 </div> -->
                 <div class="form-check form-switch">
-                  <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                  <input class="form-check-input" type="checkbox" id="friccionS" onclick="friccionq()">
                 </div>
               </div>
               <div class="form-group">
