--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programa</title>
     <link rel="stylesheet" href="./bootstrap.css">
-    <link rel="stylesheet" href="./style.css">
+    <!-- <link rel="stylesheet" href="./style.css"> -->
 </head>
 <body>
     <div class="container">
@@ -16,11 +16,11 @@
             <h1>Calculadora de vectores</h1>
               <div class="form-group">
                 <label class="col-form-label mt-4" for="inputDefault">Masa del cuerpo</label>
-                <input type="text" class="form-control"  id="inputDefault" placeholder="(Kilogramos)">
+                <input type="text" class="form-control"  id="Masa" placeholder="(Kilogramos)">
               </div>
               <div class="form-group">
                 <label class="col-form-label mt-4" for="inputDefault">Fuerza aplicada al cuerpo (Ingresar valor negativo (-) para mover el objeto en la direccion opuesta)</label>
-                <input type="text" class="form-control"  id="inputDefault" placeholder="(Newton)">
+                <input type="text" class="form-control"  id="Fuerza" placeholder="(Newton)">
               </div>
               <div class="form-group">
                 <label for="exampleSelect1" class="form-label mt-4">¿El plano está inclinado?</label>
