--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 <body>
     <div class="container">
       <div class="row">
-        <div class="col-lg-4"></div>
-          <div class="col-lg-4">
-            <h1>Calculadora de vectores</h1>
+        <div class="col-lg-4">
+          <h1>Calculadora de vectores</h1>
               <div class="form-group">
                 <label class="col-form-label mt-4" for="inputDefault">Masa del cuerpo</label>
                 <input type="text" class="form-control"  id="Masa" placeholder="(Kilogramos)">
@@ -42,13 +41,19 @@
                   <input class="form-check-input" type="checkbox" id="friccionS" onclick="friccionq()">
                 </div>
               </div>
-              <div class="form-group">
-                <button type="button" class="btn btn-primary" onclick="friccionq()">CALCULAR</button>
+              <div class="form-group" id="bigButton">
+                <button type="button" class="btn btn-primary btn-lg" onclick="calcular()">CALCULAR</button>
               </div>
+        </div>
+          <div class="col-lg-4">
+            <div id="planoq"></div>
+            <div id="error"></div>
+            <div id="friccionq"></div>
+            <div id="coeficienteEstatico"></div>
+            <div id="coeficienteDinamico"></div>
           </div>
           <div class="col-lg-4">
-              <div id="planoq"></div>
-              <div id="friccionq"></div>
+            <div id="resultado"></div>
           </div>
     </div>
     <script src="./tp.js"></script>
