--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             <div id="coeficienteDinamico"></div>
           </div>
           <div class="col-lg-4">
-            <div id="resultado"></div>
+            <div id="resultado">
+              <label id="xlr8" class="col-form-label mt-4"></label>
+            </div>
           </div>
     </div>
     <script src="./tp.js"></script>
