--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programa</title>
+    <title>Calculadora</title>
     <link rel="stylesheet" href="./bootstrap.css">
+    <link rel="stylesheet" href="./style.css">
     <!-- <link rel="stylesheet" href="./style.css"> -->
 </head>
 <body>
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
-          <h1>Calculadora de vectores</h1>
+          <h1>Calculadora Física</h1>
               <div class="form-group">
                 <label class="col-form-label mt-4" for="inputDefault">Masa del cuerpo</label>
                 <input type="text" class="form-control"  id="Masa" placeholder="(Kilogramos)">
