--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div class="container">
+      <br>
       <div class="row">
         <div class="col-lg-4">
           <h1>Calculadora Física</h1>
@@ -46,13 +47,26 @@
             <div id="coeficienteDinamico"></div>
           </div>
           <div class="col-lg-4">
+            <div class="card border-primary mb-3" style="max-width: 20rem;">
+              <div class="card-header">Resultado</div>
+              <div class="card-body">
+                <h4 id="xlr8" class="card-title">Primary card title</h4>
+                <p class="card-text">Movimiento:<br>Valor positivo -> Valor negativo <-</p>
+              </div>
+            </div>
             <div id="resultado">
               <label id="xlr8" class="col-form-label mt-4"></label>
             </div>
+            <div class="card border-primary mb-3" style="max-width: 20rem;">
+              <div class="card-header">Calculadora Física</div>
+              <div class="card-body">
+                <h4 class="card-title">Créditos</h4>
+                <p class="card-text">Ennio Pagano 5°I Javascript<br>Vachelinto 3°I Python</p>
+              </div>
+            </div>
           </div>
     </div>
-    <script src="./tp.js"></script>
-    
     </div>
+    <script src="./tp.js"></script>
 </body>
 </html>
