--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="card border-primary mb-3" style="max-width: 20rem;">
               <div class="card-header">Resultado</div>
               <div class="card-body">
-                <h4 id="xlr8" class="card-title">Primary card title</h4>
+                <h4 id="xlr8" class="card-title"></h4>
                 <p class="card-text">Movimiento:<br>Valor positivo -> Valor negativo <-</p>
               </div>
             </div>
