--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div id="friccionq"></div>
             <div id="coeficienteEstatico"></div>
             <div id="coeficienteDinamico"></div>
-          </div>
+          </div><br>
           <div class="col-lg-4">
             <div class="card border-primary mb-3" style="max-width: 20rem;">
               <div class="card-header">Resultado</div>
